--- a/.config/i3/config
+++ b/.config/i3/config
@@ -245,9 +245,23 @@ mode "$mode_media" {
   bindsym Return mode "default"
   bindsym Escape mode "default"
 }
-
 bindsym $mod+m mode "$mode_media"
-bindsym $mod+Shift+m exec --no-startup-id ~/mopidy/launch.sh
+# bindsym $mod+Shift+m exec --no-startup-id ~/mopidy/launch.sh
+
+set $mode_spotify spotify
+mode "$mode_spotify" {
+  # workaround for the spotify snap
+  bindsym Up exec --no-startup-id pactl set-sink-volume 0 +5%
+  bindsym Down exec --no-startup-id pactl set-sink-volume 0 -5%
+  bindsym Left exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+  bindsym Right exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+  bindsym space exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause, mode "default"
+
+  # back to normal: Enter or Escape
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+bindsym $mod+Shift+m mode "$mode_spotify"
 
 bindsym $mod+Tab workspace back_and_forth
 
@@ -261,7 +275,8 @@ bindsym XF86AudioPause exec mpc toggle
 bindsym XF86AudioNext exec mpc next
 bindsym XF86AudioPrev exec mpc prev
 
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"]       border pixel 1
+for_window [class="Ulauncher"] border pixel 0 
 
 for_window [window_role="pop-up"]           floating enable
 for_window [window_role="bubble"]           floating enable
@@ -294,17 +309,18 @@ assign [class="mpv"]                $w10
 exec_always --no-startup-id setxkbmap -rules evdev -model pc105 -layout us -variant intl
 exec_always --no-startup-id synclient TapButton1=1 TapButton2=3 VertScrollDelta=-113 HorizTwoFingerScroll=1
 exec_always --no-startup-id autorandr --change 
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id compton -f
 exec --no-startup-id nm-applet &
 exec --no-startup-id blueman-applet &
 exec --no-startup-id franz
-exec --no-startup-id i3-msg 'workspace $w10; append_layout ~/.config/i3/w10.json'
-exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "cava" -e cava'
-exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "ncmpcpp" -e ncmpcpp -s playlist -S search_engine'
-exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "tty-clock" -e tty-clock -c -C 3'
-exec --no-startup-id i3-msg 'workspace $w2;'
+#exec --no-startup-id i3-msg 'workspace $w10; append_layout ~/.config/i3/w10.json'
+#exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "cava" -e cava'
+#exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "ncmpcpp" -e ncmpcpp -s playlist -S search_engine'
+#exec --no-startup-id i3-msg 'workspace $w10; exec kitty --name "tty-clock" -e tty-clock -c -C 3'
+#exec --no-startup-id i3-msg 'workspace $w2;'
 
 gaps inner 15
 smart_gaps on
